# squire

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml
doc/: demo-split.tape
src/: cleanup.rs  cli.rs  diff.rs  git.rs  lib.rs  main.rs  output.rs  rebase.rs  resolve.rs  response.rs
tests/: integration.rs
tests/helpers/: mod.rs
