[package]
name = "squire"
version = "0.1.2"
edition = "2024"
description = "Non-interactive, hunk-addressable git staging CLI for LLMs"
repository = "https://github.com/tzneal/squire"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
patch = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

# Config for 'dist'
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo-release'
[package.metadata.release]
tag-name = "v{{version}}"
