[package]
publish = false
name = "squire"

version = "0.2.1"
edition = "2024"
description = "Non-interactive, hunk-addressable git staging CLI for LLMs"
repository = "https://github.com/tzneal/squire"
license = "MIT"

[package.metadata.dist]
dist = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
tempfile = "3"

[dev-dependencies]
serde_json = "1"

# Config for 'dist'
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo-release'
[package.metadata.release]
tag-name = "v{{version}}"
